--- a/FuzzyBear/MainWindow.xaml
+++ b/FuzzyBear/MainWindow.xaml
@@ -1,36 +1,40 @@
 ﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:FileDragDropControl="clr-namespace:FileDragDropControl;assembly=FileDragDropControl" x:Class="FuzzyBear.MainWindow"
-        Title="MainWindow" Height="350" Width="480" ResizeMode="NoResize">
+    
+        xmlns:FileDragDropControl="clr-namespace:FileDragDropControl;assembly=FileDragDropControl" x:Name="mainWindow" x:Class="FuzzyBear.MainWindow"
+        Title="Fuzzy Bears" Height="400" Width="800" ResizeMode="NoResize">
     <Grid Background="#FFF6F6F6">
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="1.2*"/>
+            <RowDefinition Height="2*"/>
         </Grid.RowDefinitions>
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            <GroupBox Header="File 1" HorizontalAlignment="Center"  VerticalAlignment="Top"  Margin="10,10,10,10" BorderBrush="{x:Null}" BorderThickness="0">
-                <FileDragDropControl:FileDragDropper Name="FileOneSelector" HorizontalAlignment="Center" VerticalAlignment="Top" ChangeAttempted="File_Selected" />
+            <GroupBox Header="Seed File (only one)" HorizontalAlignment="Center"  VerticalAlignment="Top"  Margin="10,10,10,10" BorderBrush="{x:Null}" BorderThickness="0" >
+                <FileDragDropControl:FileDragDropper Name="FileOneSelector" HorizontalAlignment="Center" VerticalAlignment="Top" ChangeAttempted="File_Selected" OnlyOneFile="True" Width="250"/>
             </GroupBox>
-            <GroupBox Header="File 2" HorizontalAlignment="Center"  VerticalAlignment="Top" Margin="10,10,10,10" Grid.Column="1" BorderBrush="{x:Null}" BorderThickness="0">
-                <FileDragDropControl:FileDragDropper Name="FileTwoSelector" HorizontalAlignment="Center" VerticalAlignment="Top" ChangeAttempted="File_Selected" />
+            <GroupBox Header="Files to compare (one or more)" HorizontalAlignment="Center"  VerticalAlignment="Top" Margin="10,10,10,10" Grid.Column="1" BorderBrush="{x:Null}" BorderThickness="0">
+                <FileDragDropControl:FileDragDropper Name="FileTwoSelector" HorizontalAlignment="Center" VerticalAlignment="Top" ChangeAttempted="File_Selected" OnlyOneFile="False" Width="250"/>
             </GroupBox>
 
         </Grid>
         <Grid Grid.Row="1">
 
             <StackPanel  HorizontalAlignment="Center" VerticalAlignment="Top" Margin="10" >
+        
                 <Button Name="CompareButton" Content="Compare" HorizontalAlignment="Center" VerticalAlignment="Top" Width="76" Click="Compare_Button_Click" IsEnabled="False" />
-                <GroupBox Header="Results" HorizontalAlignment="Center"  VerticalAlignment="Top"  Width="440" Height="130">
-                    <ListBox Name="OutputBox"  HorizontalAlignment="Center" Height="85" Margin="10" VerticalAlignment="Top" Width="400" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Visible" />
+                <Label Content="Comparison Score: 0 - No Match; 100 - Identical" HorizontalAlignment="Center"  Grid.Row="1" />
+                <GroupBox Header="Results" HorizontalAlignment="Center"  VerticalAlignment="Top" >
+                    <ListBox Name="OutputBox"  HorizontalAlignment="Center" Height="140" Width="540" Margin="10" VerticalAlignment="Top" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Visible" />
                 </GroupBox>
             </StackPanel>
 
         </Grid>
+        
 
 
     </Grid>
